--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <!-- Example usage -->
     <div id="mastodon-comments-115899350008636415"></div>
     <script src="mastodon-comments.js" 
-            data-status-id="115899350008636415"
-            data-instance="mas.to"
-            data-username="borneocerdas"></script>
+            data-status-id="115887173702739762"
+            data-instance="mastodon.social"
+            data-username="dnwahyudi"></script>
 </body>
 </html>
