--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Mastodon Comments Widget</title>
+    <title>Mastodon Comments Widget 2</title>
 </head>
 <body>
     <h1>Mastodon Comments Widget</h1>
